Sprint-5 changes